k8s/production/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: chrono-synth-prod
  labels:
    app.kubernetes.io/name: chrono-synth-os
    environment: production
